<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvMovieName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:includeFontPadding="false"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/btnAddToWatchList"
                app:layout_constraintEnd_toStartOf="@id/tvPoint"
                app:layout_constraintStart_toEndOf="@id/ivImage"
                app:layout_constraintTop_toTopOf="@+id/ivImage"
                tools:text="Tenet" />

            <TextView
                android:id="@+id/tvPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tvTenPoint"
                app:layout_constraintTop_toTopOf="@id/tvMovieName"
                tools:text="7.8" />

            <TextView
                android:id="@+id/tvTenPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/movie_detail_per_10"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@id/tvPoint"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnAddToWatchList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/movie_detail_remove_from_watchlist"
                app:layout_constraintBottom_toTopOf="@id/btnWatchTrailer"
                app:layout_constraintStart_toStartOf="@id/tvMovieName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieName" />

            <Button
                android:id="@+id/btnWatchTrailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/movie_detail_watch_trailer"
                app:layout_constraintStart_toStartOf="@+id/tvMovieName"
                app:layout_constraintTop_toBottomOf="@+id/btnAddToWatchList" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="btnWatchTrailer, ivImage"/>

            <View
                android:id="@+id/firstViewHorizontal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/barrier" />

            <TextView
                android:id="@+id/tvShortDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/movie_detail_short_description"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstViewHorizontal" />

            <TextView
                android:id="@+id/tvShortDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/movie_detail_short_description"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/tvShortDescriptionTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvShortDescriptionTitle" />

            <View
                android:id="@+id/secondBarrierHorizontal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/tvShortDescription" />

            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/movie_detail_details"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvShortDescriptionTitle"
                app:layout_constraintTop_toBottomOf="@+id/secondBarrierHorizontal" />

            <TextView
                android:id="@+id/tvGenreTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/movie_detail_genre"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tvReleasedDateTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvDetails" />

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/tvGenreTitle"
                app:layout_constraintStart_toEndOf="@+id/tvGenreTitle"
                tools:text="Action, Sci-Fi" />

            <TextView
                android:id="@+id/tvReleasedDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/movie_detail_released_date"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvDetails"
                app:layout_constraintTop_toBottomOf="@+id/tvGenreTitle" />

            <TextView
                android:id="@+id/tvReleasedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/tvReleasedDateTitle"
                app:layout_constraintStart_toStartOf="@id/tvGenre"
                tools:text="2020, 3 September" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>